# traverze

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md
benchdata/small/: doc01.txt  doc02.txt  doc03.txt
src/: lib.rs  main.rs
